--- a/lang/en.json
+++ b/lang/en.json
@@ -1,1 +1,36 @@
-{}
+{
+  "foundryvtt-over-my-head": {
+    "settings": {
+      "useModule": {
+        "name": "Use Module",
+        "hint": "Enable or disable the use of modules"
+      },
+      "debugMode": {
+        "name": "Debug Mode",
+        "hint": "Enable or disable debug mode"
+      },
+      "behaviorTokens": {
+        "name": "Behavior",
+        "hint": "Configure what tokens the module should consider to determine occlusion mode.\nDefault is to include tokens that are both active and controlled.",
+        "choices": {
+          "default": "Active and Controlled",
+          "onlyActive": "Only Active Tokens",
+          "onlyControlled": "Only Controlled Tokens"
+        }
+      },
+      "behaviorParty": {
+        "name": "Behavior Party",
+        "hint": "Configure if the module should consider party members for occlusion mode, or only the controlled tokens."
+      },
+      "behaviorGM": {
+        "name": "Behavior GM",
+        "hint": "Configure if the module should be active for the GM as well",
+        "choices": {
+          "default": "Active, Only Active Tokens",
+          "onlyNPCs": "Active, only NPCs",
+          "inactive": "Inactive"
+        }
+      }
+    }
+  }
+}
